responsive issue on btns and spacing

--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -19,9 +19,13 @@ html, body
 .main-wrapper{
 	min-height:100vh;
 	height:100%;
-	@media screen and(max-width:991px)and(min-width:320px){
+	@media screen and(max-width:991px)and(min-width:768px){
 		max-width:100%;
 		padding:0 rem(16px);
+	}
+	@media screen and(max-width:767px)and(min-width:320px){
+		max-width:100%;
+		
 	}
 }
 
